--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ituchanga</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="py-3 mb-3 border-bottom">
@@ -22,7 +23,7 @@
             </form>
     
             <div class="flex-shrink-0 dropdown">
-                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                <img src="joven-confiado_1098-20868.webp" alt="mdo" width="32" height="32" class="rounded-circle">
               </a>
             </div>
           </div>
@@ -31,28 +32,64 @@
       <div class="container-fluid pb-3">
         <div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;">
           <div class="bg-light border rounded-3" style="text-decoration: none;">
+            <br>
             <strong>Navegación</strong>
-           <div style="text-decoration: none;">
-            <li><a>Inicio</a></li>
-            <li><a>Temas</a></li>
-            <li><a>Mensajes</a></li>
-            <li><a>Favoritos</a></li>
-            <li><a>Top de la semana</a></li>
-            <li><a>Perfil</a></li><li><a>Configuraciones</a></li>
-            <li><a>Buscar</a></li>
-            <li><a>Cerrar sesión</a></li>
-        </div>
+              <ul>
+                  <li>Inicio</li>
+                  <li>Noticias</li>
+                  <li>Iniciar sesion</li>
+                  <li>Perfil</li>
+                  <li>Notificaciones</li>
+                  <li>Contactos</li>
+                  <li>Temas</li>
+                  <li>Mensajes</li>
+                  <li>Top de la semana</li>
+                  <li>Configuraciones</li>
+                  <li>Buscar</li>
+                </ul>
+          </nav>
+          <br><br><br>
+          <strong>Temas</strong>
+          <ul>
+              <li>#ElectricistaYa</li>
+              <li>#TuberiaRota</li>
+              <li>#Carpintero</li>
+              <li>#BuenTrabajo</li>
+              <li>#BuenaReferencia</li>
+          </ul>
+      </nav>
             <br><br><br><br><br><br><br><br><br><br>
           </div>
-          <div class="bg-light border rounded-3">
-            <span class="border bottom">Aires</span>
-            <span class="border bottom">Albañil</span>
-            <span class="border bottom">Albercas</span>
-            <span class="border bottom">Aparatos</span>
-            <span class="border bottom">Automatización</span>
-            <br><br><br><br><br><br><br><br><br><br>
+          <div class="grid-layout">
+            <h2>Oficios</h2>
+            <div class="caja">Aires</div>
+            <div class="caja">Albañil</div>
+            <div class="caja">Automatización</div>
+            <div class="caja">Albercas</div>
+            <div class="caja">Aparatos</div>
+            <div class="caja">Carpintería</div> 
+            <div class="caja">Cerrajería</div>
+            <div class="caja">Cortinas</div>
+            <div class="caja">Costurerías</div>
+            <div class="caja">Electricidad</div>
+            <div class="caja">Estética Automotor</div>
+            <div class="caja">Fumigación</div>
+            <div class="caja">Herrería</div>
+            <div class="caja">Jardinería</div>
+            <div class="caja">Lavado de tapizado</div>
+          </div>
           </div>
         </div>
+      </div>
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-muted">© 2022 Ituchanga, Plataforma de Oficios.</span>
+          </div>
+        </footer>
       </div>
 </body>
 </html>
