--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ituchanga</title>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header class="py-3 mb-3 border-bottom">
@@ -31,7 +31,7 @@
       </header>
       <div class="container-fluid pb-3">
         <div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;">
-          <div class="bg-light border rounded-3" style="text-decoration: none;">
+          <div class="bg-light border rounded-3">
             <br>
             <strong>Navegación</strong>
               <ul>
